objects/ASI_CRM_Price_List__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Has_Price_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Price Item?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ITEM_GROUP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Effective_Date__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Expiry_Date__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Price_List_Description__c</fullName>
        <label>Price List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler Product Price</fullName>
                </value>
                <value>
                    <fullName>D&amp;C Product Price</fullName>
                </value>
                <value>
                    <fullName>Promotion Product Price</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Product Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price List</label>
    <listViews>
        <fullName>ASI_CRM_JP_D_C_Price_List</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_JP_Effective_Date__c</columns>
        <columns>ASI_CRM_JP_Expiry_Date__c</columns>
        <columns>ASI_CRM_JP_Price_List_Description__c</columns>
        <columns>ASI_CRM_JP_Approved__c</columns>
        <columns>ASI_CRM_JP_Approved_Date__c</columns>
        <columns>ASI_CRM_JP_Remarks__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_Has_Price_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Price_Type__c</field>
            <operation>equals</operation>
            <value>D&amp;C Product Price</value>
        </filters>
        <label>D&amp;C Price List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Direct_Sales_Price_List</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_JP_Effective_Date__c</columns>
        <columns>ASI_CRM_JP_Expiry_Date__c</columns>
        <columns>ASI_CRM_JP_Price_List_Description__c</columns>
        <columns>ASI_CRM_JP_Approved_Date__c</columns>
        <columns>ASI_CRM_JP_Remarks__c</columns>
        <columns>ASI_CRM_JP_Approved__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_Has_Price_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Price_Type__c</field>
            <operation>equals</operation>
            <value>Direct Sales Product Price</value>
        </filters>
        <label>Direct Sales Price List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_WSP_List</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_JP_Effective_Date__c</columns>
        <columns>ASI_CRM_JP_Expiry_Date__c</columns>
        <columns>ASI_CRM_JP_Price_List_Description__c</columns>
        <columns>ASI_CRM_JP_Approved__c</columns>
        <columns>ASI_CRM_JP_Approved_Date__c</columns>
        <columns>ASI_CRM_Has_Price_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Price_Type__c</field>
            <operation>equals</operation>
            <value>Wholesaler Product Price</value>
        </filters>
        <label>Wholesaler &amp; FOC on Invoice Price List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Price_Type__c</columns>
        <columns>ASI_CRM_JP_Effective_Date__c</columns>
        <columns>ASI_CRM_JP_Expiry_Date__c</columns>
        <columns>ASI_CRM_JP_Approved__c</columns>
        <columns>ASI_CRM_JP_Approved_Date__c</columns>
        <columns>ASI_CRM_JP_Price_List_Description__c</columns>
        <columns>ASI_CRM_JP_Remarks__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Price List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_D_C_Price_List</fullName>
        <active>true</active>
        <label>D&amp;C Price List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_D_C_Price_List_Approved</fullName>
        <active>true</active>
        <description>This is the record type for the D&amp;C Price List being approved.</description>
        <label>D&amp;C Price List Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Sales_Price_List</fullName>
        <active>true</active>
        <label>Direct Sales Price List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Sales_Price_List_Approve</fullName>
        <active>true</active>
        <description>This record type is for controlling the read only access after submission for approval</description>
        <label>Direct Sales Price List Approve</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Wholesaler_FOC_on_Invoice_Price_List</fullName>
        <active>true</active>
        <label>Wholesaler &amp; FOC on Invoice Price List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Wholesaler_FOC_on_Invoice_Price_List_Approve</fullName>
        <active>true</active>
        <description>Record Type for the approval request submitted for apporval/ approved</description>
        <label>Wholesaler &amp; FOC on Invoice Price List Approve</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_BACKDATE_EFFECTIVETO</fullName>
        <active>true</active>
        <description>Prevent Backdate for Price List.</description>
        <errorConditionFormula>AND(
NOT(
INCLUDES($User.BypassTriggers__c, &quot;ASI_CRM_JP_ADMIN&quot;)
),
ASI_CRM_JP_Effective_Date__c &lt; TODAY() )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_JP_Approved__c</errorDisplayField>
        <errorMessage>Effective Date cannot be earlier than today.</errorMessage>
    </validationRules>
</CustomObject>